[gd_scene load_steps=15 format=3 uid="uid://br881r6sp1t87"]

[ext_resource type="Script" path="res://Scripts/PlayerSelect.gd" id="1_2p4ur"]
[ext_resource type="Texture2D" uid="uid://b21kxmkyfd3l5" path="res://Assets/Pictures/menu_bkg2.png" id="1_luobr"]
[ext_resource type="FontFile" uid="uid://chuow3mkvw5sm" path="res://Assets/Fonts/Dongle-Regular.ttf" id="2_6b0rc"]
[ext_resource type="PackedScene" uid="uid://7r72pjlct6xf" path="res://Player Select/EnterName1.tscn" id="3_4loww"]
[ext_resource type="PackedScene" uid="uid://dbnvcyifdltby" path="res://Player Select/carousel1.tscn" id="4_232pt"]
[ext_resource type="PackedScene" uid="uid://bkx22hryhgg7n" path="res://Player Select/carousel2.tscn" id="5_srb58"]
[ext_resource type="Texture2D" uid="uid://t5nimfbu4j0y" path="res://Assets/Pictures/back_arrow.png" id="6_8yvai"]
[ext_resource type="Texture2D" uid="uid://bfxe2iikjv72w" path="res://Assets/Pictures/next_arrow.png" id="6_xd0nq"]
[ext_resource type="PackedScene" uid="uid://bj1vxuoiwssec" path="res://Player Select/diff_cat_menu.tscn" id="9_wq2h2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l13oj"]
bg_color = Color(0.964706, 0.929412, 0.862745, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.839216, 0.741176, 0.635294, 1)
corner_radius_top_left = 102
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
expand_margin_left = 119.0
expand_margin_right = 129.0

[sub_resource type="Theme" id="Theme_6wo6o"]
default_font_size = 1020
Label/colors/font_color = Color(0.733333, 0.619608, 0.509804, 1)
Label/font_sizes/font_size = 45
Label/fonts/font = ExtResource("2_6b0rc")
Label/styles/normal = SubResource("StyleBoxFlat_l13oj")

[sub_resource type="FontVariation" id="FontVariation_sj2t4"]
base_font = ExtResource("2_6b0rc")
spacing_glyph = 3
spacing_space = 5
spacing_top = -5
spacing_bottom = -8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xbsd7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Theme" id="Theme_3epr5"]
Button/styles/focus = SubResource("StyleBoxFlat_xbsd7")
Button/styles/hover = SubResource("StyleBoxFlat_xbsd7")
Button/styles/normal = SubResource("StyleBoxFlat_xbsd7")
Button/styles/pressed = SubResource("StyleBoxFlat_xbsd7")

[node name="PlayerSelect" type="Node"]
script = ExtResource("1_2p4ur")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_luobr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.079
anchor_right = 0.5
anchor_bottom = 0.079
offset_left = -191.0
offset_top = -29.75
offset_right = 233.0
offset_bottom = 50.25
grow_horizontal = 2
size_flags_horizontal = 4
theme = SubResource("Theme_6wo6o")

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.437
anchor_top = 0.356
anchor_right = 0.437
anchor_bottom = 0.356
offset_left = -185.288
offset_top = -28.48
offset_right = -145.288
offset_bottom = -5.48
theme_override_fonts/font = SubResource("FontVariation_sj2t4")
text = "player character select"

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -428.0
offset_right = 243.0
offset_bottom = 491.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Player1" type="Control" parent="Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="LineEdit1" parent="Control2/Player1" instance=ExtResource("3_4loww")]
layout_mode = 1
offset_left = -241.0
offset_top = 29.0
offset_right = 249.0
offset_bottom = 95.0
placeholder_text = "18 characters max"

[node name="CatLabel1" parent="Control2/Player1" instance=ExtResource("4_232pt")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = 93.0
offset_right = -164.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 0

[node name="Player2" type="Control" parent="Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit2" parent="Control2/Player2" instance=ExtResource("3_4loww")]
layout_mode = 1
offset_left = -242.0
offset_top = -8.5
offset_right = 248.0
offset_bottom = 57.5
placeholder_text = "18 characters max"

[node name="CatLabel2" parent="Control2/Player2" instance=ExtResource("5_srb58")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 53.0
offset_right = 5.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 0

[node name="NextControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="NextControl"]
position = Vector2(-99.449, -107)
scale = Vector2(1.0624, 1.0678)
texture = ExtResource("6_xd0nq")

[node name="Next" type="Button" parent="NextControl"]
layout_mode = 0
offset_left = -228.0
offset_top = -167.0
offset_right = -21.0
offset_bottom = -25.9996
theme = SubResource("Theme_3epr5")

[node name="BackControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Sprite2D" type="Sprite2D" parent="BackControl"]
position = Vector2(151, -90)
texture = ExtResource("6_8yvai")

[node name="Back" type="Button" parent="BackControl"]
layout_mode = 0
offset_left = 67.0
offset_top = -175.0
offset_right = 274.0
offset_bottom = -34.0
theme = SubResource("Theme_3epr5")

[node name="DiffCatMenu" parent="." instance=ExtResource("9_wq2h2")]
visible = false

[connection signal="mouse_entered" from="NextControl/Next" to="." method="_on_next_mouse_entered"]
[connection signal="mouse_exited" from="NextControl/Next" to="." method="_on_next_mouse_exited"]
[connection signal="pressed" from="NextControl/Next" to="." method="_on_next_pressed"]
[connection signal="mouse_entered" from="BackControl/Back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="BackControl/Back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="BackControl/Back" to="." method="_on_back_pressed"]
